Interpreter/tests/negative-examples/dispatchStaticOnVoidFromWhile.cl
class Main inherits IO {
  x : Main;

  main() : Object { {
    x <= while false loop out_string("cheese") pool;

    out_string("Hello, world.\n") ;
    x@Main.main();
  }} ;
} ; 
